feat: 打开窗口，设置应用menu，在docker中保留menu

--- a/model.html
+++ b/model.html
@@ -4,15 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>electron-demo</title>
+    <title>model</title>
 </head>
 <body>
-    <h1>Hello electron</h1>
-    <button id="btn">click me</button>
-
-
-    <script>
-        // require('./renderer-process/open.js');
-    </script>
+    model html
 </body>
 </html>
